# GeoLoc

./: CMakeLists.txt  LICENSE  README.md
include/: api_manager.h  app.h  db_manager.h  main_window.h
scripts/: run.sh  setup.sh  setup_env.sh
src/: api_manager.cpp  app.cpp  db_manager.cpp  main.cpp  main_window.cpp
test/: api_test.cpp  db_test.cpp  ui_test.cpp
